--- a/index.html
+++ b/index.html
@@ -87,19 +87,19 @@
     <div id="design">
         <h1>Design</h1>
         <div class="imagens-design">
-            <img src="/imagens/favo.png">
-            <img src="/imagens/Apresentação MANÁ 1.png">
-            <img src="/imagens/omar.png">
-            <img src="/imagens/bromélia.png"
+            <img src="imagens/favo.png">
+            <img src="imagens/Apresentação MANÁ 1.png">
+            <img src="imagens/omar.png">
+            <img src="imagens/bromélia.png"
         </div>
     </div>
 
     <div id="web-design">
         <h1>Web Design</h1>
         <div class="imagens-web-design">
-            <img src="/imagens/site.png">
+            <img src="imagens/site.png">
             <a><h1>Star way, the movie</h1></a>
-            <img id="figma-logo"src="/imagens/figma logo.png">
+            <img id="figma-logo"src="imagens/figma logo.png">
         </div>
     </div>
 
