--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     </nav>
 
     <main id="home">
-        <h1>Gabriel Palaoro</h1>
-        <h2>Designer | Webdesigner | Frontend dev</h2>
+        <div class="fundotxt-home">
+            <h1>Gabriel Palaoro</h1>
+            <h2>Designer | Webdesigner | Frontend dev</h2>
+        </div>
     </main>
 
     <div id="abbout">
@@ -87,19 +89,19 @@
     <div id="design">
         <h1>Design</h1>
         <div class="imagens-design">
-            <img src="imagens/favo.png">
-            <img src="imagens/Apresentação MANÁ 1.png">
-            <img src="imagens/omar.png">
-            <img src="imagens/bromélia.png"
+            <a href="https://drive.google.com/file/d/13YFowdhtLZUzmhcpvqqR4XQfaPCga8zU/view?usp=share_link"><img src="imagens/favo.png"> </a>
+            <a href="https://drive.google.com/file/d/1m0Sf7iGLb1TnJ1VRHfrGCMmxfGGPCfsK/view" ><img  src="imagens/Apresentação MANÁ 1.png"> </a>
+            <a href=""><img src="imagens/omar.png"></a>
+            <a href="https://drive.google.com/file/d/114WJ8A0S1X3nYyWLUoM4u8aUZkciPCfx/view"> <img src="imagens/bromélia.png"></a>
         </div>
     </div>
 
     <div id="web-design">
         <h1>Web Design</h1>
         <div class="imagens-web-design">
-            <img src="imagens/site.png">
-            <a><h1>Star way, the movie</h1></a>
-            <img id="figma-logo"src="imagens/figma logo.png">
+            <a href="https://bieldodesign.github.io/Portifolio2022/"><img class="site" src="imagens/icone_site_antigo.png"></a>
+            <a class ="link"href="https://bieldodesign.github.io/videos/"><h1>Star way, the movie</h1></a>
+            <a  href="https://www.figma.com/@bieldodesign"><img id="figma-logo"src="imagens/figma logo.png"></a>
         </div>
     </div>
 
@@ -109,7 +111,8 @@
             <p>Intersted in my work? Please mail-me <br>
                 Interessado no meu trabalho? Envie-me um e-mail</p>
             <a href="mailto:bieldodesign@gmail.com"><h2>bieldodesign@gmail.com</h2></a>
-            <img src="imagens/174857.png">
+            <a href="https://www.linkedin.com/in/gabriel-mengavel-gomes-palaoro-2bbb62210/" ><img src="imagens/174857.png"></a>
+            <a href="https://github.com/Bieldodesign" ><img src="imagens/github_icon.png"></a>
         </div>
     </div>
 
